Small changes to the navbar. fix: Added a specific width to it. fix: removed some whitespaces.

--- a/css/dashboard/dashboard-nav.css
+++ b/css/dashboard/dashboard-nav.css
@@ -3,6 +3,7 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    width: 200px;
 }
 
 
@@ -52,7 +53,6 @@ nav {
 
 /* Footer */
 #nav-footer {
-
     width: 100%;
 }
 #nav-footer a {
